[package]
name = "merlin"
version = "1.0.13"
authors = ["geremachek <mrender2005@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellexpand = "2.1"

[dependencies.clap]
version = "2.33.3"
default-features = false

